tests/cmp/dc-label-wrong-brackets.golden
tests/cmp/dc-label-wrong-brackets.trp:1:25: parse error
  1 | let val x = 50 raisedTo <alice; bob>
    |                         ^
  unexpected '<'
  expected expression

Suggestion: DC labels require backticks around the angle brackets.
  Use `< ... >` not < ... >
  Example: `< alice ; bob >`

